# bosch-mes-connector

./: .gitignore  CMakeLists.txt  README.md
src/Installer/: MES_Connector_Setup.iss
src/app/: CMakeLists.txt  MesConnector_zh_CN.ts  Resource.rc  dataloop.cpp  dataloop.h  main.cpp  mesconnectorclient.cpp  mesconnectorclient.h  mesconnectorclient.ui  mscconnector.qrc  polyworks.cpp  polyworks.h  settings.cpp  settings.h  settings.ui  xopconreader.cpp  xopconreader.h  xopconwriter.cpp  xopconwriter.h
src/app/mscl/: CreateNewPieceWithID.pwmacro  CreateNewPieceWithProps.pwmacro  FindInspectTemplate.pwmacro  LoginDataloop.pwmacro  OnUploadDataloop.pwmacro  WM_OpenDataloopProject.pwmacro
src/server/: CMakeLists.txt  main.cpp  messerver.cpp  messerver.h  messerver.qrc  messerver.ui  xopconreader.cpp  xopconreader.h  xopconwriter.cpp  xopconwriter.h
